# auto_docking

./: Présentaion.pptx  README.md
QR_CODE_generator/minibot_description/: CMakeLists.txt  package.xml
QR_CODE_generator/minibot_description/meshes/: Marker0.dae
QR_CODE_generator/minibot_description/urdf/: ar_2020.urdf
QR_CODE_generator/minibot_description/worlds/: qr_code_generator.world
minilab_demo_simulation/launch/: minilab_demo_teleop.launch
minilab_model/urdf/: minilab_equiped.urdf
minilab_navigation/: gmapping (copy).rviz
minilab_simulation/launch/: minilab_gazebo.launch
minilab_teleop/src/: keyboard_teleop_ZQSD
tracking_qr_code/: CMakeLists.txt  package.xml
tracking_qr_code/launch/: visual-servo-minilab.launch
tracking_qr_code/src/: test.py  visual_servo_minilab.cpp
vision_visp/visp_auto_tracker/launch/: test.launch  tutorial.launch
vision_visp/visp_auto_tracker/src/: test1.py
