<?xml version="1.0"?>
<package>
  <name>tracking_qr_code</name>
  <version>0.0.0</version>
  <description>The tracking_qr_code package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mscv@todo.todo">mscv</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visp_bridge</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visp_auto_tracker</run_depend>
  <run_depend>visp_bridge</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
